--- a/views/index.ejs
+++ b/views/index.ejs
@@ -62,7 +62,7 @@
      <strong>  <span><%= Actions[i].TeamName %></span> </strong>
       <span>:</span>
       <span><%if (typeof Actions[i].Minutes !== 'undefined') { %>
-              Actions[i].Minutes
+                 <span><%=    Actions[i].Minutes %></span>
 <% } %>
     
 </span>
