--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,8 @@
   <title>NBA</title>
 
   <!-- CSS (load bootstrap from a CDN) -->
-<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+ <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 <link href= "/assets/style.css" rel="stylesheet" type="text/css" />
 
 </head>
@@ -46,37 +47,6 @@
             </div>
       </div>
 
-      <div class="col-md-4">
-      <div class="form_main">
-                  <h4 class="heading"><strong>NBA </strong> Search <span></span></h4>
-                  <div class="form">
-                  	<form action="/getMinutes" method="POST">
-                      <input type="text"  placeholder="TeamName" value="" name="TeamName" class="txt">
-                      <br>
-                      <br>
-
-                        <ul class="Actions">
-  <% for(var i=0; i< Actions.length; i++) {%>
-    <li class="list-group-item">
-
-     <strong>  <span><%= Actions[i].TeamName %></span> </strong>
-      <span>:</span>
-      <span><%if (typeof Actions[i].Minutes !== 'undefined') { %>
-                 <span><%=    Actions[i].Minutes %></span>
-<% } %>
-    
-</span>
-</span>
-</span>
-
-    </li>
-  <% } %>
-  </ul>
-                  </form>
-              </div>
-              </div>
-        </div>
-
 
   </div>
 </div>
@@ -84,7 +54,17 @@
   <br>
   <br>
 
+
   <ul class="Actions">
+    <table  id="compactTable" class="table">
+
+      <thead class="thead-light">
+
+        <tr>
+           <th>Result</th>
+        </tr>
+        </thead>
+   <tbody>
   <% for(var i=0; i< Actions.length; i++) {%>
     <li class="list-group-item">
 
@@ -96,6 +76,9 @@
     </li>
   <% } %>
   </ul>
+
+</tbody>
+</table>
 
 
 </body>
