--- a/views/classementJoueur.ejs
+++ b/views/classementJoueur.ejs
@@ -12,21 +12,28 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-default" role="navigation">
-<div class="container-fluid">
+  <nav class="navbar navbar-default navbar-expand-lg" role="navigation">
 
-    <div class="navbar-header">
+
         <a class="navbar-brand" href="#">
             <span> NBA - </span>
             NoSQL Application with NodeJS & MongoDB
         </a>
 
-        <ul class="nav navbar-nav">
-            <li><a href="/">Home</a></li>
-        </ul>
-    </div>
+        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+            <li class="nav-item active">
+              <a class="nav-link" href="/">Home</a>
+            </li>
 
-</div>
+            <li class="nav-item">
+              <a class="nav-link" href="/classementJoueur">PlayerStats</a>
+            </li>
+
+          <li class="nav-item">
+              <a class="nav-link disabled" href="#">TeamClassement</a>
+          </li>
+        </ul>
+
 </nav>
 
 
