--- a/views/classementJoueur.ejs
+++ b/views/classementJoueur.ejs
@@ -30,7 +30,7 @@
             </li>
 
           <li class="nav-item">
-              <a class="nav-link disabled" href="#">TeamClassement</a>
+              <a class="nav-link" href="/classementEquipe">TeamClassement</a>
           </li>
         </ul>
 
