--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,7 +29,7 @@
             </li>
 
           <li class="nav-item">
-              <a class="nav-link disabled" href="#">TeamClassement</a>
+              <a class="nav-link" href="/classementEquipe">TeamClassement</a>
           </li>
         </ul>
 
