--- a/views/classementEquipe.ejs
+++ b/views/classementEquipe.ejs
@@ -63,7 +63,7 @@
                     <br>
                     <br>
 
-                    <input type="submit" value="submit" name="submit" class="txt2">
+                    <input type="submit" value="Valider" name="submit" class="txt2">
                 </form>
             </div>
             </div>
