--- a/views/EquipeSaison.ejs
+++ b/views/EquipeSaison.ejs
@@ -105,7 +105,7 @@
       <hr>
        <% for (key in Team[0].value) { %>
         <tr>
-            <td> <%= key %> </td>
+            <td> <strong> <%= key %> </strong> </td>
             <td> <%= Team[0].value[key] %> </td>
          </tr>
 
@@ -113,7 +113,7 @@
       <% } %>
       </hr>
 
-
+    </tbody>
    </table>
       <% } %>
 
