--- a/views/index.ejs
+++ b/views/index.ejs
@@ -63,6 +63,10 @@
   </div>
 
     <h3> Bonjour et bienvenue sur notre application de statistiques NBA</h3>
+    <br>
+    <br>
+
+    <p> Vous êtes actuellement sur la vue utilisateur, vous pouvez consulter le <a href="/classementEquipe">classement des équipes</a> ou encore le   <a href="/classementJoueur">classement des joueurs</a> .</p>
 </div>
 
 <br>
